test/tests/compiler/18_structures/invalid_parse/dot_invalid_member.plx
type struc s(y: i32)

pub x: struc s;
# dot operator must be immediately followed by member name
# (can't parenthesize it)
pub fn main(none) i32 {
    return x.(y)
}

